# Sistema-de-Atendimento

./: .env  Dockerfile  README.md  alembic.ini  app.py  config.py  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 08c4b879e5a8_primeira_migração_criando_tabelas.py
app/: app.py  database.py  models.py  schemas.py  settings.py  xml_utils.py
entrega3_impl/: .gitignore  Dockerfile  app.py  banco.sql  config.py  docker-compose.yml  requirements.txt
entrega3_impl/routes/: atendimentos.py  integracao.py  pacientes.py  prescricoes.py
entrega3_impl/schemas/: consulta.xsd  finalizacao.xsd  financeiro_retorno.xsd  prescricao.xsd  reserva.xsd  resposta.xsd
entrega3_impl/services/: db_service.py  xml_service.py
entrega3_impl/templates/: base.html  index.html
entrega3_impl/templates/atendimentos/: detalhe.html  finalizar.html  listar.html  (+1 more)
routers/: atendimento.py  pacientes.py  prescricao.py
routes/: api.py  app.py  atendimentos.py  dashboard.py  exportacao.py  importacao.py  pacientes.py  prescricoes.py
services/: arquivo_service.py  exportacao_service.py  importacao_service.py  prescricao_service.py
templates/: base.html  exportar.html  importar.html  index.html
templates/atendimentos/: detalhe.html  encerrar.html  listar.html  novo.html
templates/pacientes/: detalhe.html  editar.html  listar.html  novo.html
templates/prescricoes/: listar.html  novo.html
tests/: conftest.py  test_atendimento.py  test_paciente.py
utils/: formatters.py
xml/: encerramento.xml  hospital.xsd  prescricao.xml  retorno_estoque_xml.txt  validate.py
(+8 files in other folders)
