[tool.poetry]
name = "sistema-de-atendimento"
version = "0.1.0"
description = ""
authors = ["Henry Gabriel <63942305+HenryGabriel-2407@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.3"
pytest = "^9.0.2"
taskipy = "^1.14.1"
fastapi = {extras = ["standard"], version = "^0.135.2"}
sqlalchemy = "^2.0.48"
xmlschema = "^4.3.1"
lxml = "^6.0.2"
uvicorn = "^0.42.0"
fastapi-cli = "^0.0.24"
dicttoxml = "^1.7.16"
alembic = "^1.18.4"
psycopg = {extras = ["binary"], version = "^3.3.3"}

[tool.taskipy.tasks]
test = "pytest tests/test_routes.py -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
